--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
   <description>gpt-connector-commons</description>
   <properties>
     <java.version>21</java.version>
+    <lombok.version>1.18.30</lombok.version>
   </properties>
   <dependencies>
     <dependency>
@@ -25,7 +26,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.28</version>
+      <version>${lombok.version}</version>
       <optional>true</optional>
     </dependency>
   </dependencies>
