added Distribution management

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,15 @@
     <java.version>21</java.version>
     <lombok.version>1.18.30</lombok.version>
   </properties>
+
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>Github Repository</name>
+      <url>https://maven.pkg.github.com/gpt-works/gpt-connector-commons</url>
+    </repository>
+  </distributionManagement>
+
   <dependencies>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
