--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
   <distributionManagement>
     <repository>
-      <id>github</id>
+      <id>github-gpt-connector-commons</id>
       <name>Github Repository</name>
       <url>https://maven.pkg.github.com/gpt-works/gpt-connector-commons</url>
     </repository>
