--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -7,16 +7,21 @@ on:
       - master
 
 jobs:
-
-  release:
+  build:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true && github.ref == 'refs/heads/master'
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.merge_commit_sha }}
           fetch-depth: '0'
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'adopt'
 
       - name: Bump version and push tag
         id: auto_tag
@@ -24,6 +29,29 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           WITH_V: false
+
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.merge_commit_sha }}
+          fetch-depth: '0'
+
+      - name: Publish to GitHub Packages Apache Maven
+        run: mvn -s $GITHUB_WORKSPACE/.github/workflows/maven-settings.xml -B package --file pom.xml
+        env:
+          USER_NAME: ${{ secrets.USER_NAME }}
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.event.pull_request.merged == true && github.ref == 'refs/heads/master'
+
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.merge_commit_sha }}
+          fetch-depth: '0'
 
       - name: Echo tag for debugging
         run: echo "Tag from auto_tag step is ${{ steps.auto_tag.outputs.tag }}"
