--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -7,44 +7,9 @@ on:
       - master
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.pull_request.merge_commit_sha }}
-          fetch-depth: '0'
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v3
-        with:
-          java-version: '21'
-          distribution: 'adopt'
-
-      - name: Bump version and push tag
-        id: auto_tag
-        uses: anothrNick/github-tag-action@1.67.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          WITH_V: false
-
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.pull_request.merge_commit_sha }}
-          fetch-depth: '0'
-
-      - name: Publish to GitHub Packages Apache Maven
-        run: mvn -s $GITHUB_WORKSPACE/.github/workflows/maven-settings.xml -B package --file pom.xml
-        env:
-          USER_NAME: ${{ secrets.USER_NAME }}
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
   release:
     runs-on: ubuntu-latest
-    needs: build
     if: github.event.pull_request.merged == true && github.ref == 'refs/heads/master'
 
     steps:
@@ -53,16 +18,23 @@ jobs:
           ref: ${{ github.event.pull_request.merge_commit_sha }}
           fetch-depth: '0'
 
+      - name: Bump version and push tag
+        id: auto_tag
+        uses: anothrNick/github-tag-action@1.67.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          WITH_V: false
+
       - name: Echo tag for debugging
-        run: echo "Tag from auto_tag step is ${{ build.steps.auto_tag.outputs.tag }}"
+        run: echo "Tag from auto_tag step is ${{ steps.auto_tag.outputs.tag }}"
 
       - name: Create GitHub Release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         with:
-          tag_name: ${{ build.steps.auto_tag.outputs.tag }}
-          release_name: Release ${{ build.steps.auto_tag.outputs.tag }}
+          tag_name: ${{ steps.auto_tag.outputs.tag }}
+          release_name: Release ${{ steps.auto_tag.outputs.tag }}
           body: |
             Changes in this Release
-            - Auto-incremented version to ${{ build.steps.auto_tag.outputs.tag }}
+            - Auto-incremented version to ${{ steps.auto_tag.outputs.tag }}
